--- a/resultado.html
+++ b/resultado.html
@@ -18,11 +18,12 @@
 <body onload="resultado()">
 
 
-    <div id="mostrarResultado"> 
+    <div id="mostrarResultado">
         <p id="acertos"> Seus acertos: nAn </p>
         <p id="qtt"> Quantidade de questões respondidas: nAn </p>
-    </div>  
+    </div>
 
 
- </body>
+</body>
 
+<!--Comentario-->
