--- a/Q1a.html
+++ b/Q1a.html
@@ -13,15 +13,13 @@
     <title>Questão 1</title>
 </head>
 
-<body onchange="salvarFormulario('q1')" onload="autofill('q1')" >
+<body class="fundo1" onchange="salvarFormulario('q1')" onload="autofill('q1')" >
     <div class="container">
         <div class="text-center">
             <h1 class="font-weight-bold corEnade">Site Simulado ENADE</h1>
             <h3>TEMA: Análise e Desenvolvimento de Sistemas - 2011</h3>
 
-
             <a class="btn btn-primary font-weight-bold" href="PaginaInicial.html">Página Inicial</a>
-
 
         </div>
         <br><br>
@@ -83,7 +81,7 @@
             </label>
         </p>
 
-        <button onclick="correçao()"> Corrigir </button> 
+        <button class="btn btn-primary font-weight-bold" onclick="correçao()"> Corrigir </button> 
         <!--<input type="submit" onclick="correçao()" value="Corrigir" class="btn btn-primary" /> -->
         <div id="display"></div>
         <hr>
