botão de página inicial excluído

--- a/PaginaInicial.html
+++ b/PaginaInicial.html
@@ -16,7 +16,7 @@
         <h1 class="corEnade">
             O que é o <i>"ENADE"?</i>
         </h1>
-
+        <!--<a class="btn btn-primary font-weight-bold" href="PaginaInicial.html">Página Inicial</a>-->
         <p></p>
         <p class="mt-3">
             O Exame Nacional de Desempenho dos Estudantes (Enade) avalia o rendimento dos concluintes dos cursos de
