--- a/Q1a.html
+++ b/Q1a.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="imagem/png" href="img/logoEnade.png"/>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>  
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -18,8 +19,6 @@
         <div class="text-center">
             <h1 class="font-weight-bold corEnade">Site Simulado ENADE</h1>
             <h3>TEMA: Análise e Desenvolvimento de Sistemas - 2011</h3>
-
-            <a class="btn btn-primary font-weight-bold" href="PaginaInicial.html">Página Inicial</a>
 
         </div>
         <br><br>
@@ -70,7 +69,7 @@
         </p>
         <p>
             <input id="correta" name="q1" value="D" type="radio">
-            <label for="alt1D">
+            <label for="correta">
                 d) o trabalho compulsório de escravos proporcionou privilégios aos príncipes.
             </label>
         </p>
@@ -81,7 +80,7 @@
             </label>
         </p>
 
-        <button class="btn btn-primary font-weight-bold" onclick="correçao()"> Corrigir </button> 
+        <button class="btn btn-primary font-weight-bold" onclick="correçao1()"> Corrigir </button> 
         <!--<input type="submit" onclick="correçao()" value="Corrigir" class="btn btn-primary" /> -->
         <div id="display"></div>
         <hr>
@@ -103,4 +102,60 @@
         </div>
 </body>
 
+
+<script>
+    function getCorreta() {
+
+    return document.getElementById("correta").value
+    }
+
+
+    function getCheckado() {
+
+    input = document.querySelectorAll('input')
+
+    console.log(input)
+
+        for (c = 0; c < input.length; c++) {
+
+            if (input[c].checked == true) {
+
+                return input[c].value
+
+                break
+            }
+        }
+    }
+
+    var entrada;
+    var correta;
+    
+    function correçao1() {
+
+        entrada = getCheckado()
+        correta = getCorreta()
+
+        if (entrada == correta) {
+            Swal.fire({
+			icon: 'success',
+			title: 'Boa!!',
+			text: `Parabéns! A alternativa correta realmente é a letra "${correta}"`
+		  })
+            //document.getElementById("display").innerHTML = `Parabéns, voce acertou! A alternativa é a letra ${correta}`
+            //document.getElementById("display").style.display = "block"
+        }
+
+        else {
+            Swal.fire({
+			icon: 'error',
+			title: 'Oops...',
+			text: `Que pena, voce errou! A alternativa correta é a letra "${correta}"`
+		  })
+            //document.getElementById("display").innerHTML = `Que pena, voce errou! A alternativa é a letra ${correta}`
+            //document.getElementById("display").style.display = "block"
+        }
+
+    }
+
+</script>
 </html>
