--- a/Q10a.html
+++ b/Q10a.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="imagem/png" href="img/logoEnade.png"/>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>  
     <link rel="stylesheet" href="css/style.css">
     <script src="funçoes.js"> </script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -42,8 +43,8 @@
         </p>
 
         <p>
-            <input id="altA" name="q10" value="A" type="radio">
-            <label for="altA">
+            <input id="correta" name="q10" value="A" type="radio">
+            <label for="correta">
                 a) elaboram e utilizam padrões de codificação
                 conjuntamente, os quais, quando utilizados corretamente
                 e apropriadamente, reduzem problemas individuais.
@@ -84,7 +85,7 @@
             </label>
         </p>
 
-        <input type="submit" value="Corrigir" class="btn btn-primary" />
+        <input type="submit" onclick="correçao10()" value="Corrigir" class="btn btn-primary" />
         <hr>
         <div class="row">
             <a class="col-auto mr-auto" href="resultado.html"> Finalizar Simulado</a>
@@ -101,5 +102,63 @@
         </footer>
     </div>
 </body>
+<script>
+    function getCorreta() {
 
+    return document.getElementById("correta").value
+    }
+
+    function getCheckado() {
+
+    input = document.querySelectorAll('input')
+
+    console.log(input)
+
+        for (c = 0; c < input.length; c++) {
+
+            if (input[c].checked == true) {
+
+                return input[c].value
+
+                break
+            }
+        }
+    }
+
+    var entrada;
+    var correta;
+    
+    function correçao10() {
+
+        entrada = getCheckado()
+        correta = getCorreta()
+
+        if (entrada == correta) {
+            Swal.fire({
+			icon: 'success',
+			title: 'Boa!!',
+			text: `Parabéns! A alternativa correta realmente é a letra "a) elaboram e utilizam padrões de codificação
+                conjuntamente, os quais, quando utilizados corretamente
+                e apropriadamente, reduzem problemas individuais."`
+              
+		  })
+            setInterval(() => {
+                window.open ('Q11a.html','_self',false)
+            }, 3000);
+        }   
+
+        else {
+            Swal.fire({
+			icon: 'error',
+			title: 'Oops...',
+			text: `Que pena, voce errou! A alternativa correta é a letra: "a) elaboram e utilizam padrões de codificação
+                conjuntamente, os quais, quando utilizados corretamente
+                e apropriadamente, reduzem problemas individuais."`
+		  })
+          setInterval(() => {
+            window.open ('Q11a.html','_self',false)
+          }, 3000);
+        }
+    }
+</script>
 </html>
