--- a/Q1a.html
+++ b/Q1a.html
@@ -109,7 +109,6 @@
     return document.getElementById("correta").value
     }
 
-
     function getCheckado() {
 
     input = document.querySelectorAll('input')
@@ -139,28 +138,26 @@
             Swal.fire({
 			icon: 'success',
 			title: 'Boa!!',
-			text: `Parabéns! A alternativa correta realmente é a letra "${correta}"`
+			text: `Parabéns! A alternativa correta realmente é a letra "d) o trabalho compulsório de escravos proporcionou privilégios aos príncipes."`
               
 		  })
-          setInterval(() => {
-            window.open ('Q2a.html','_self',false)
-          }, 3000);
-          
-            //document.getElementById("display").innerHTML = `Parabéns, voce acertou! A alternativa é a letra ${correta}`
-            //document.getElementById("display").style.display = "block"
+            setInterval(() => {
+                window.open ('Q2a.html','_self',false)
+            }, 3000);
         }   
 
         else {
             Swal.fire({
 			icon: 'error',
 			title: 'Oops...',
-			text: `Que pena, voce errou! A alternativa correta é a letra "${correta}"`
+			text: `Que pena, voce errou! A alternativa correta é a letra: "d) o trabalho compulsório de escravos proporcionou privilégios aos príncipes."`
 		  })
-            //document.getElementById("display").innerHTML = `Que pena, voce errou! A alternativa é a letra ${correta}`
-            //document.getElementById("display").style.display = "block"
+          setInterval(() => {
+            window.open ('Q2a.html','_self',false)
+          }, 3000);
         }
 
     }
-
 </script>
+
 </html>
