--- a/Q30a.html
+++ b/Q30a.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="imagem/png" href="img/logoEnade.png"/>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>  
     <link rel="stylesheet" href="css/style.css">
     <script src="funçoes.js"> </script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -43,8 +44,8 @@
             Acerca dessas asserções, assinale a opção correta.
         </P>
         <p>
-            <input id="alt2A" name="q30" value="A" type="radio">
-            <label for="alt2A">
+            <input id="correta" name="q30" value="A" type="radio">
+            <label for="correta">
                 a) As duas asserções são proposições verdadeiras, e a
                 segunda é uma justificativa correta da primeira.
             </label>
@@ -78,11 +79,8 @@
             </label>
         </p>
 
-        <input type="submit" value="Corrigir" class="btn btn-primary" />
+        <input type="submit" onclick="correçao30()" value="Corrigir" class="btn btn-primary" />
         <hr>
-
-        <hr>
-
         <div class="row">
             <a class="col-auto mr-auto" href="resultado.html"> Finalizar Simulado</a>
 
@@ -98,5 +96,60 @@
         </footer>
     </div>
 </body>
+<script>
+    function getCorreta() {
 
+    return document.getElementById("correta").value
+    }
+
+    function getCheckado() {
+
+    input = document.querySelectorAll('input')
+
+    console.log(input)
+
+        for (c = 0; c < input.length; c++) {
+
+            if (input[c].checked == true) {
+
+                return input[c].value
+
+                break
+            }
+        }
+    }
+
+    var entrada;
+    var correta;
+    
+    function correçao30() {
+
+        entrada = getCheckado()
+        correta = getCorreta()
+
+        if (entrada == correta) {
+            Swal.fire({
+			icon: 'success',
+			title: 'Boa!!',
+			text: `Parabéns! A alternativa correta realmente é a letra "a) As duas asserções são proposições verdadeiras, e a
+                segunda é uma justificativa correta da primeira."`
+		  })
+            setInterval(() => {
+                window.open ('Q31a.html','_self',false)
+            }, 3000);
+        }   
+        
+        else {
+            Swal.fire({
+			icon: 'error',
+			title: 'Oops...',
+			text: `Que pena, voce errou! A alternativa correta é a letra: "a) As duas asserções são proposições verdadeiras, e a
+                segunda é uma justificativa correta da primeira."`
+		  })
+          setInterval(() => {
+            window.open ('Q31a.html','_self',false)
+          }, 3000);
+        }
+    }
+</script>
 </html>
