--- a/Q5a.html
+++ b/Q5a.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="imagem/png" href="img/logoEnade.png"/>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>  
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -53,7 +54,7 @@
         </p>
         <p>
             <input id="correta" name="q" value="C" type="radio">
-            <label for="alt2C">
+            <label for="correta">
                 c) três estados brasileiros responderam por 84% do desmatamento na Amazônia Legal entre agosto de 2010 e
                 junho de 2011.
             </label>
@@ -74,7 +75,7 @@
             </label>
         </p>
 
-        <input type="submit" onclick="correçao()" value="Corrigir" class="btn btn-primary" />
+        <input type="submit" onclick="correçao5()" value="Corrigir" class="btn btn-primary" />
         <div id="display"></div>
         <hr>
 
@@ -94,5 +95,62 @@
         </footer>
     </div>
 </body>
+<script>
+    function getCorreta() {
 
+    return document.getElementById("correta").value
+    }
+
+    function getCheckado() {
+
+    input = document.querySelectorAll('input')
+
+    console.log(input)
+
+        for (c = 0; c < input.length; c++) {
+
+            if (input[c].checked == true) {
+
+                return input[c].value
+
+                break
+            }
+        }
+    }
+
+    var entrada;
+    var correta;
+    
+    function correçao5() {
+
+        entrada = getCheckado()
+        correta = getCorreta()
+
+        if (entrada == correta) {
+            Swal.fire({
+			icon: 'success',
+			title: 'Boa!!',
+			text: `Parabéns! A alternativa correta realmente é a letra: "a) As duas são proposições verdadeiras, e a segunda é
+                uma justificativa correta da primeira."`
+              
+		  })
+            setInterval(() => {
+                window.open ('Q6a.html','_self',false)
+            }, 3000);
+        }   
+
+        else {
+            Swal.fire({
+			icon: 'error',
+			title: 'Oops...',
+			text: `Que pena, voce errou! A alternativa correta é a letra: "a) As duas são proposições verdadeiras, e a segunda é
+                uma justificativa correta da primeira."`
+		  })
+          setInterval(() => {
+            window.open ('Q6a.html','_self',false)
+          }, 3000);
+        }
+
+    }
+</script>
 </html>
