--- a/Q6a.html
+++ b/Q6a.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="imagem/png" href="img/logoEnade.png"/>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>  
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -37,7 +38,7 @@
         </p>
         <p>
             <input id="correta" name="q6" value="B" type="radio">
-            <label for="alt3B">
+            <label for="correta">
                 b) às oportunidades de melhoria salarial que surgem à medida
                 que aumenta o nível de escolaridade dos indivíduos.
             </label>
@@ -68,7 +69,7 @@
             </label>
         </p>
 
-        <input type="submit" onclick="correçao()" value="Corrigir" class="btn btn-primary" />
+        <input type="submit" onclick="correçao6()" value="Corrigir" class="btn btn-primary" />
         <div id="display"></div>
         <hr>
 
@@ -87,5 +88,62 @@
         </footer>
     </div>
 </body>
+<script>
+    function getCorreta() {
 
+    return document.getElementById("correta").value
+    }
+
+    function getCheckado() {
+
+    input = document.querySelectorAll('input')
+
+    console.log(input)
+
+        for (c = 0; c < input.length; c++) {
+
+            if (input[c].checked == true) {
+
+                return input[c].value
+
+                break
+            }
+        }
+    }
+
+    var entrada;
+    var correta;
+    
+    function correçao6() {
+
+        entrada = getCheckado()
+        correta = getCorreta()
+
+        if (entrada == correta) {
+            Swal.fire({
+			icon: 'success',
+			title: 'Boa!!',
+			text: `Parabéns! A alternativa correta realmente é a letra: "b) às oportunidades de melhoria salarial que surgem à medida
+                que aumenta o nível de escolaridade dos indivíduos."`
+              
+		  })
+            setInterval(() => {
+                window.open ('Q7a.html','_self',false)
+            }, 3000);
+        }   
+
+        else {
+            Swal.fire({
+			icon: 'error',
+			title: 'Oops...',
+			text: `Que pena, voce errou! A alternativa correta é a letra: "b) às oportunidades de melhoria salarial que surgem à medida
+                que aumenta o nível de escolaridade dos indivíduos."`
+		  })
+          setInterval(() => {
+            window.open ('Q7a.html','_self',false)
+          }, 3000);
+        }
+
+    }
+</script>
 </html>
