--- a/Q7a.html
+++ b/Q7a.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="imagem/png" href="img/logoEnade.png"/>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>  
     <link rel="stylesheet" href="css/style.css">
     <script src="funçoes.js"> </script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -55,8 +56,8 @@
             </label>
         </p>
         <p>
-            <input id="altB" name="q7" value="B" type="radio">
-            <label for="altB">
+            <input id="correta" name="q7" value="B" type="radio">
+            <label for="correta">
                 b) a redefinição de critérios e instrumentos de
                 avaliação de custo-benefício que reflitam os efeitos
                 socioeconômicos e os valores reais do consumo e da
@@ -88,7 +89,8 @@
             </label>
         </p>
 
-        <input type="submit" value="Corrigir" class="btn btn-primary" />
+        <input type="submit" onclick="correçao7()" value="Corrigir" class="btn btn-primary" />
+
         <hr>
         <div class="row">
             <a class="col-auto mr-auto" href="resultado.html"> Finalizar Simulado</a>
@@ -105,5 +107,65 @@
         </footer>
     </div>
 </body>
+<script>
+    function getCorreta() {
 
+    return document.getElementById("correta").value
+    }
+
+    function getCheckado() {
+
+    input = document.querySelectorAll('input')
+
+    console.log(input)
+
+        for (c = 0; c < input.length; c++) {
+
+            if (input[c].checked == true) {
+
+                return input[c].value
+
+                break
+            }
+        }
+    }
+
+    var entrada;
+    var correta;
+    
+    function correçao7() {
+
+        entrada = getCheckado()
+        correta = getCorreta()
+
+        if (entrada == correta) {
+            Swal.fire({
+			icon: 'success',
+			title: 'Boa!!',
+			text: `Parabéns! A alternativa correta realmente é a letra "b) a redefinição de critérios e instrumentos de
+                avaliação de custo-benefício que reflitam os efeitos
+                socioeconômicos e os valores reais do consumo e da
+                preservação."`
+              
+		  })
+            setInterval(() => {
+                window.open ('Q8a.html','_self',false)
+            }, 3000);
+        }   
+
+        else {
+            Swal.fire({
+			icon: 'error',
+			title: 'Oops...',
+			text: `Que pena, voce errou! A alternativa correta é a letra: "b) a redefinição de critérios e instrumentos de
+                avaliação de custo-benefício que reflitam os efeitos
+                socioeconômicos e os valores reais do consumo e da
+                preservação."`
+		  })
+          setInterval(() => {
+            window.open ('Q8a.html','_self',false)
+          }, 3000);
+        }
+    }
+</script>
 </html>
