--- a/resultado.html
+++ b/resultado.html
@@ -1,28 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-
-
-
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" type="imagem/png" href="img/logoEnade.png"/>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>questao 1</title>
-    <link rel="stylesheet" type="text/css" href="config.css">
+    <title>Resultado</title>
 
     <script src="funçoes.js"> </script>
 
 </head>
 
-<body onload="resultado()">
+<body class="fundo1" onload="resultado()">
 
-
-    <div id="mostrarResultado">
-        <p id="acertos"> Seus acertos: nAn </p>
-        <p id="qtt"> Quantidade de questões respondidas: nAn </p>
+    <div class="container text-center mt-5">
+        <div id="mostrarResultado">
+            <h1 id="acertos"> Seus acertos: nAn </h1>
+            <h1 id="qtt"> Quantidade de questões respondidas: nAn </h1>
+            <h1 id="porcentagem"> Seus acertos: nAn </h1>
+        </div>
     </div>
-
 
 </body>
 
