Ajustes P2 e página instruções

--- a/instrucoes.html
+++ b/instrucoes.html
@@ -11,15 +11,44 @@
     <title>Instruções Simulado</title>
 </head>
 <body class="fundo1">
-    <div class="text-center">
-        <h1 class="corEnade">Como responder?</h1>
-            <p>como responder blablablabalbalbalbalbal</p>
-        <h1 class="corEnade">O que Acontece?</h1>
-        <p>mostrar pop up com resposta certa/errada</p>
-        <h1 class="corEnade">Fechar pop-up ir para proxima questao</h1>
-        <p>xxxxx</p>
-        <h1 class="corEnade">se clicar no botao finalizar</h1>
-        <p>xxxxxxx</p>
+    <div class="container mt-4 text-center">
+        <h1 class="corEnade">Página de Instruções para o Simulado Enade</h1>
+        <br>
+        <h3 class="">Como responder?</h3>
+        <p>Leia com atenção cada enunciado e responda a questão de acordo com seu conhecimento e as informações passadas em cada enunciado, e clique na opção desejada para salvar sua resposta, e no canto inferior direito, clique em "Próxima Questão"</p>
+        <hr>
+        <h3 class="">Botão "Próxima Questão"</h3>
+        <p>Ao clicar no botão "Próxima Questão", você será redirecionado para a questão seguinte</p>
+        <hr>
+        <h3 class="">Botão "Corrigir"</h3>
+        <p>De acordo com sua resposta, ao clicar no botão "Corrigir", irá aparecer na tela uma janela pop-up, que irá mostrar uma prévia de cada resposta sendo ela respondida de maneira correta ou incorreta. Você será redirecionado automaticamente para a próxima questão, portanto clique no botão "Corrigir", somente quando tiver certeza de sua resposta!</p>
+        <hr>
+        <h3 class="">Botão "Finalizar Simulado"</h3>
+        <p>Ao clicar no botão "Finalizar Simulado", o site irá te redirecionar automaticamente para a página "Resultado" </p>
+        <hr>
+        <h3>Página "Resultado"</h3>
+        <p>A página "Resultado", irá mostrar informações como: Questões respondidas, acertos e porcentagem de alternativas corretas.</p>
+        <hr>
+        <h3 class="">Instruções de rodapé</h3>
+        <p> Ao final de cada página, estará disponível um link para redirecionamento para a página do <b>Enade</b>, onde é a fonte das questões utilizadas nesse simulado e para maiores informações. </p>
+        <hr>
+
+        <a class="btn btn-primary" type="submit" href="PaginaInicial.html">Página Inicial</a>
+
+        <a class="btn btn-primary" type="submit" href="Q1a.html">INICIAR SIMULADO PMI</a>
+
+        <a class="btn btn-primary text-white" onclick="abrir('http://enade.inep.gov.br/enade/#!/index')">Pop-UP ENADE</a>
+
+        <hr>
+
+        <footer class="text-center"> 
+            <p> 
+                <i>Mais informações sobre o Enade, consultar o site do Enade no link: 
+                    <a target="_blank" href="http://enade.inep.gov.br/enade/#!/index"> Enade Inep </a>
+                </i>
+            </p>
+        </footer>
+    
     </div>
 </body>
 </html>
