--- a/resultado.html
+++ b/resultado.html
@@ -19,12 +19,24 @@
 
     <div class="container text-center mt-5">
         <div id="mostrarResultado">
-            <h1 id="qtt"> Quantidade de questões respondidas: nAn </h1>
-            <h1 id="acertos"> Seus acertos: nAn </h1>
-            <h1 id="porcentagem"> Seus acertos: nAn </h1>
+            <h1>Parabéns por ter concluído o Simulado Enade! </h1>
+            <br>
+            <h1>Veja suas estatísticas abaixo:</h1>
+            <br>
+            <h3 id="qtt"> Quantidade de questões respondidas: nAn </h3>
+            <h3 id="acertos"> Seus acertos: nAn </h3>
+            <h3 id="porcentagem"> Seus acertos: nAn </h3>
+            <br><br>
         </div>
     </div>
-
+    <hr>
+    <footer class="text-center"> 
+        <p> 
+            <i>Mais informações sobre o Enade, consultar o site do Enade no link: 
+                <a target="_blank" href="http://enade.inep.gov.br/enade/#!/index"> Enade Inep </a>
+            </i>
+        </p>
+    </footer>
 </body>
 
 <!--Comentario-->
