--- a/resultado.html
+++ b/resultado.html
@@ -28,15 +28,16 @@
             <h3 id="porcentagem"> Seus acertos: nAn </h3>
             <br><br>
         </div>
+        <a class="btn btn-primary" type="submit" href="PaginaInicial.html">Retornar para Página Inicial</a>
+        <hr>
+        <footer class="text-center"> 
+            <p> 
+                <i>Mais informações sobre o Enade, consultar o site do Enade no link: 
+                    <a target="_blank" href="http://enade.inep.gov.br/enade/#!/index"> Enade Inep </a>
+                </i>
+            </p>
+        </footer>
     </div>
-    <hr>
-    <footer class="text-center"> 
-        <p> 
-            <i>Mais informações sobre o Enade, consultar o site do Enade no link: 
-                <a target="_blank" href="http://enade.inep.gov.br/enade/#!/index"> Enade Inep </a>
-            </i>
-        </p>
-    </footer>
 </body>
 
 <!--Comentario-->
