--- a/Q11a.html
+++ b/Q11a.html
@@ -84,7 +84,7 @@
             </label>
         </p>
         <p>
-            <input name="q11" value="E" type="radio">
+            <input name="altE" value="E" type="radio">
             <label for="altE">
                 e) Tanto a primeira quanto a segunda asserções são
                 proposições falsas.
