ajuste para input vazio

--- a/Q11a.html
+++ b/Q11a.html
@@ -139,6 +139,7 @@
     var correta;
     
     function correçao11() {
+        if(entrada != undefined){
 
         entrada = getCheckado()
         correta = getCorreta()
@@ -168,5 +169,9 @@
           }, 3000);
         }
     }
+    else{
+        inputVazio();
+    }
+}
 </script>
 </html>
