--- a/Q14a.html
+++ b/Q14a.html
@@ -114,6 +114,7 @@
     var correta;
     
     function correçao14() {
+        if(entrada != undefined){
 
         entrada = getCheckado()
         correta = getCorreta()
@@ -141,5 +142,9 @@
           }, 3000);
         }
     }
+    else{
+        inputVazio();
+    }
+}
 </script>
 </html>
