--- a/Q15a.html
+++ b/Q15a.html
@@ -147,6 +147,7 @@
     var correta;
     
     function correçao15() {
+        if(entrada != undefined){
 
         entrada = getCheckado()
         correta = getCorreta()
@@ -176,5 +177,9 @@
           }, 3000);
         }
     }
+    else{
+        inputVazio();
+    }
+}
 </script>
 </html>
