--- a/Q18a.html
+++ b/Q18a.html
@@ -152,6 +152,7 @@
     var correta;
     
     function correçao18() {
+        if(entrada != undefined){
 
         entrada = getCheckado()
         correta = getCorreta()
@@ -179,5 +180,9 @@
           }, 3000);
         }
     }
+    else{
+        inputVazio();
+    }
+}
 </script>
 </html>
