--- a/Q19a.html
+++ b/Q19a.html
@@ -125,6 +125,7 @@
     var correta;
     
     function correçao19() {
+        if(entrada != undefined){
 
         entrada = getCheckado()
         correta = getCorreta()
@@ -152,5 +153,9 @@
           }, 3000);
         }
     }
+    else{
+        inputVazio();
+    }
+}
 </script>
 </html>
