--- a/Q20a.html
+++ b/Q20a.html
@@ -138,6 +138,7 @@
     var correta;
     
     function correçao20() {
+        if(entrada != undefined){
 
         entrada = getCheckado()
         correta = getCorreta()
@@ -169,5 +170,9 @@
           }, 3000);
         }
     }
+    else{
+        inputVazio();
+    }
+}
 </script>
 </html>
