--- a/Q21a.html
+++ b/Q21a.html
@@ -132,6 +132,7 @@
     var correta;
     
     function correçao21() {
+        if(entrada != undefined){
 
         entrada = getCheckado()
         correta = getCorreta()
@@ -159,5 +160,9 @@
           }, 3000);
         }
     }
+    else{
+        inputVazio();
+    }
+}
 </script>
 </html>
