--- a/Q27a.html
+++ b/Q27a.html
@@ -132,6 +132,7 @@
     var correta;
     
     function correçao27() {
+        if(entrada != undefined){
 
         entrada = getCheckado()
         correta = getCorreta()
@@ -161,5 +162,9 @@
           }, 3000);
         }
     }
+    else{
+        inputVazio();
+    }
+}
 </script>
 </html>
