--- a/Q30a.html
+++ b/Q30a.html
@@ -127,6 +127,7 @@
     var correta;
     
     function correçao30() {
+        if(entrada != undefined){
 
         entrada = getCheckado()
         correta = getCorreta()
@@ -155,5 +156,9 @@
           }, 3000);
         }
     }
+    else{
+        inputVazio();
+    }
+}
 </script>
 </html>
