--- a/Q33a.html
+++ b/Q33a.html
@@ -151,6 +151,7 @@
     var correta;
     
     function correçao33() {
+        if(entrada != undefined){
 
         entrada = getCheckado()
         correta = getCorreta()
@@ -177,5 +178,9 @@
           }, 3000);
         }
     }
+    else{
+        inputVazio();
+    }
+}
 </script>
 </html>
