--- a/Q3a.html
+++ b/Q3a.html
@@ -149,6 +149,7 @@
     var correta;
     
     function correçao3() {
+        if(entrada != undefined){
 
         entrada = getCheckado()
         correta = getCorreta()
@@ -178,5 +179,9 @@
           }, 3000);
         }
     }
+    else{
+        inputVazio();
+    }
+}
 </script>
 </html>
