--- a/Q10a.html
+++ b/Q10a.html
@@ -133,6 +133,7 @@
     var correta;
     
     function correçao10() {
+        if(entrada != undefined){
 
         entrada = getCheckado()
         correta = getCorreta()
@@ -164,5 +165,9 @@
           }, 3000);
         }
     }
+    else{
+        inputVazio();
+    }
+}
 </script>
 </html>
