--- a/Q12a.html
+++ b/Q12a.html
@@ -139,7 +139,7 @@
     var correta;
     
     function correçao12() {
-
+        if(entrada != undefined){
         entrada = getCheckado()
         correta = getCorreta()
 
@@ -166,5 +166,10 @@
           }, 3000);
         }
     }
+    else{
+        inputVazio();
+    }
+}
+
 </script>
 </html>
