--- a/Q16a.html
+++ b/Q16a.html
@@ -146,6 +146,7 @@
     var correta;
     
     function correçao16() {
+        if(entrada != undefined){
 
         entrada = getCheckado()
         correta = getCorreta()
@@ -175,5 +176,9 @@
           }, 3000);
         }
     }
+    else{
+        inputVazio();
+    }
+}
 </script>
 </html>
