--- a/Q17a.html
+++ b/Q17a.html
@@ -117,6 +117,7 @@
     var correta;
     
     function correçao17() {
+        if(entrada != undefined){
 
         entrada = getCheckado()
         correta = getCorreta()
@@ -144,5 +145,9 @@
           }, 3000);
         }
     }
+    else{
+        inputVazio();
+    }
+}
 </script>
 </html>
