--- a/Q23a.html
+++ b/Q23a.html
@@ -139,6 +139,7 @@
     var correta;
     
     function correçao23() {
+        if(entrada != undefined){
 
         entrada = getCheckado()
         correta = getCorreta()
@@ -166,5 +167,9 @@
           }, 3000);
         }
     }
+    else{
+        inputVazio();
+    }
+}
 </script>
 </html>
