--- a/Q25a.html
+++ b/Q25a.html
@@ -117,6 +117,7 @@
     var correta;
     
     function correçao25() {
+        if(entrada != undefined){
 
         entrada = getCheckado()
         correta = getCorreta()
@@ -146,5 +147,9 @@
           }, 3000);
         }
     }
+    else{
+        inputVazio();
+    }
+}
 </script>
 </html>
