--- a/Q26a.html
+++ b/Q26a.html
@@ -146,6 +146,7 @@
     var correta;
     
     function correçao26() {
+        if(entrada != undefined){
 
         entrada = getCheckado()
         correta = getCorreta()
@@ -173,5 +174,9 @@
           }, 3000);
         }
     }
+    else{
+        inputVazio();
+    }
+}
 </script>
 </html>
