--- a/Q34a.html
+++ b/Q34a.html
@@ -146,7 +146,8 @@
     var correta;
     
     function correçao34() {
-
+        if(entrada != undefined){
+            
         entrada = getCheckado()
         correta = getCorreta()
 
@@ -174,5 +175,9 @@
           }, 3000);
         }
     }
+    else{
+        inputVazio();
+    }
+}
 </script>
 </html>
