--- a/Q35a.html
+++ b/Q35a.html
@@ -147,6 +147,7 @@
     var correta;
     
     function correçao35() {
+        if(entrada != undefined){
 
         entrada = getCheckado()
         correta = getCorreta()
@@ -173,5 +174,9 @@
           }, 3000);
         }
     }
+    else{
+        inputVazio();
+    }
+}
 </script>
 </html>
