--- a/Q7a.html
+++ b/Q7a.html
@@ -138,6 +138,7 @@
     var correta;
     
     function correçao7() {
+        if(entrada != undefined){
 
         entrada = getCheckado()
         correta = getCorreta()
@@ -171,5 +172,9 @@
           }, 3000);
         }
     }
+    else{
+        inputVazio();
+    }
+}
 </script>
 </html>
