--- a/Q9a.html
+++ b/Q9a.html
@@ -134,7 +134,7 @@
     var correta;
     
     function correçao9() {
-
+        if(entrada != undefined){
         entrada = getCheckado()
         correta = getCorreta()
 
@@ -161,5 +161,9 @@
           }, 3000);
         }
     }
+    else{
+        inputVazio();
+    }
+}
 </script>
 </html>
