--- a/discursivas/discursiva3.html
+++ b/discursivas/discursiva3.html
@@ -3,36 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Questão Discursiva 1</title>
+    <title>Questão Discursiva 3</title>
 </head>
-<body>
+<body class="fundo1">
     <div class="container mt-3">
-    <h4 class="text-center corEnade">QUESTÃO DISCURSIVA 1</h4>
+    <h4 class="text-center corEnade">QUESTÃO DISCURSIVA 3</h4>
         <p class="mt-4">
-            A Educação a Distância (EaD) é a modalidade de ensino que permite que a
-            comunicação e a construção do conhecimento entre os usuários envolvidos
-            possam acontecer em locais e tempos distintos. São necessárias tecnologias
-            cada vez mais sofisticadas para essa modalidade de ensino não presencial, com
-            vistas à crescente necessidade de uma pedagogia que se desenvolva por meio
-            de novas relações de ensino-aprendizagem.
+            Um jogo consiste de dois dados, cada um deles com 6 faces. As faces dos
+            dados são numeradas de 1 até 6. Para ganhar uma partida, o jogador deverá
+            fazer 3 lançamentos de dados, vencendo ao menos 2 deles. O jogador vence um
+            lançamento se a soma dos dados for igual a 7 ou 11. Para iniciar um novo jogo,
+            deve-se pressionar o botão “JOGAR”. Quando pressionado, ele imediatamente
+            fica desabilitado e os dois dados aparecem girando na frente do jogador. Ao
+            se pressionar o botão “LANÇAR”, os dados começam a girar mais lentamente
+            até parar, mostrando os valores das suas faces em um sistema tridimensional.
+            Nesse momento, encerra-se o lançamento e aparece “VENCEU” ou “PERDEU”
+            na tela da aplicação, juntamente com um sinal sonoro de alerta e a quantidade
+            de lançamentos restantes. Somente quando o jogador pressiona novamente
+            o botão “LANÇAR” é que se inicia novo lançamento de dados. A qualquer
+            momento, o jogador poderá encerrar o jogo: pressionando o botão “PARAR”.
+            Tal ação reabilita o botão “JOGAR”.
+        </p>
+        <i>
+            (LARMAN, C. Applying UML and Patterns: An Introduction to Object-Oriented Analysis and Design
+            and Iterative Development. Prentice Hall, 3.ed, 2004. (com adaptações)
+        </i>
+        <p>
+            Considerando a caracterização do jogo de dados, elabore os seguintes artefatos da análise de requisitos.
         </p>
         <p>
-            O Censo da Educação Superior de 2009, realizado pelo MEC/INEP, aponta
-            para o aumento expressivo do número de matrículas nessa modalidade. Entre
-            2004 e 2009, a participação da EaD na Educação Superior passou de 1,4%
-            para 14,1%, totalizando 838 mil matrículas, das quais 50% em cursos de
-            licenciatura. Levantamentos apontam ainda que 37% dos estudantes de EaD
-            estão na pós-graduação e que 42% estão fora do seu estado de origem.
+            a) Desenhe um diagrama de classes de domínio (UML) para o problema apresentado. (valor: 6,0 pontos)
         </p>
         <p>
-            Considerando as informações acima, enumere três vantagens de um curso a distância, justificando brevemente cada
-            uma delas. (valor: 10,0 pontos) 
+            b) Liste três requisitos funcionais referentes ao comportamento funcional essencial do jogo. (valor: 4,0 pontos) 
         </p>
-
         
     <div class="border container">
         <h4 class="text-center">RASCUNHO</h4>
