--- a/discursivas/discursiva1.html
+++ b/discursivas/discursiva1.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Questão Discursiva 1</title>
 </head>
-<body>
+<body class="fundo1">
     <div class="container mt-3">
     <h4 class="text-center corEnade">QUESTÃO DISCURSIVA 1</h4>
         <p class="mt-4">
