--- a/discursivas/discursiva2.html
+++ b/discursivas/discursiva2.html
@@ -3,35 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Questão Discursiva 1</title>
+    <title>Questão Discursiva 2</title>
 </head>
-<body>
+<body class="fundo1">
     <div class="container mt-3">
-    <h4 class="text-center corEnade">QUESTÃO DISCURSIVA 1</h4>
+    <h4 class="text-center corEnade">QUESTÃO DISCURSIVA 2</h4>
         <p class="mt-4">
-            A Educação a Distância (EaD) é a modalidade de ensino que permite que a
-            comunicação e a construção do conhecimento entre os usuários envolvidos
-            possam acontecer em locais e tempos distintos. São necessárias tecnologias
-            cada vez mais sofisticadas para essa modalidade de ensino não presencial, com
-            vistas à crescente necessidade de uma pedagogia que se desenvolva por meio
-            de novas relações de ensino-aprendizagem.
+            A Síntese de Indicadores Sociais (SIS 2010) utiliza-se
+            da Pesquisa Nacional por Amostra de Domicílios (PNAD)
+            para apresentar sucinta análise das condições de vida no
+            Brasil. Quanto ao analfabetismo, a SIS 2010 mostra que
+            os maiores índices se concentram na população idosa, em
+            camadas de menores rendimentos e predominantemente
+            na região Nordeste, conforme dados do texto a seguir.
+            
         </p>
         <p>
-            O Censo da Educação Superior de 2009, realizado pelo MEC/INEP, aponta
-            para o aumento expressivo do número de matrículas nessa modalidade. Entre
-            2004 e 2009, a participação da EaD na Educação Superior passou de 1,4%
-            para 14,1%, totalizando 838 mil matrículas, das quais 50% em cursos de
-            licenciatura. Levantamentos apontam ainda que 37% dos estudantes de EaD
-            estão na pós-graduação e que 42% estão fora do seu estado de origem.
+            A taxa de analfabetismo referente a pessoas de 15 anos
+            ou mais de idade baixou de 13,3% em 1999 para 9,7%
+            em 2009. Em números absolutos, o contingente era de
+            14,1 milhões de pessoas analfabetas. Dessas, 42,6%
+            tinham mais de 60 anos, 52,2% residiam no Nordeste
+            e 16,4% viviam com ½ salário-mínimo de renda familiar
+            per capita. Os maiores decréscimos no analfabetismo
+            por grupos etários entre 1999 a 2009 ocorreram na faixa
+            dos 15 a 24 anos. Nesse grupo, as mulheres eram mais
+            alfabetizadas, mas a população masculina apresentou
+            queda um pouco mais acentuada dos índices de
+            analfabetismo, que passou de 13,5% para 6,3%, contra
+            6,9% para 3,0% para as mulheres.
         </p>
+        <i>
+            SIS 2010: Mulheres mais escolarizadas são mães mais tarde e têm menos filhos.
+            Disponível em: <A href="www.ibge.gov.br/home/presidencia/noticias" target="_blank">www.ibge.gov.br/home/presidencia/noticias></A>. Acesso em: 25 ago. 2011 (adaptado)
+        </i>
+        <br>
+        <img src="/img/imgQD2.PNG" alt="">
         <p>
-            Considerando as informações acima, enumere três vantagens de um curso a distância, justificando brevemente cada
-            uma delas. (valor: 10,0 pontos) 
-        </p>
+            Com base nos dados apresentados, redija um texto dissertativo acerca da importância de políticas e programas
+            educacionais para a erradicação do analfabetismo e para a empregabilidade, considerando as disparidades
+            sociais e as dificuldades de obtenção de emprego provocadas pelo analfabetismo. Em seu texto, apresente uma
+            proposta para a superação do analfabetismo e para o aumento da empregabilidade. (valor: 10,0 pontos)
+        </p>    
 
         
     <div class="border container">
