--- a/discursivas/discursiva4.html
+++ b/discursivas/discursiva4.html
@@ -3,36 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Questão Discursiva 1</title>
+    <title>Questão Discursiva 4</title>
 </head>
-<body>
+<body class="fundo1">
     <div class="container mt-3">
-    <h4 class="text-center corEnade">QUESTÃO DISCURSIVA 1</h4>
-        <p class="mt-4">
-            A Educação a Distância (EaD) é a modalidade de ensino que permite que a
-            comunicação e a construção do conhecimento entre os usuários envolvidos
-            possam acontecer em locais e tempos distintos. São necessárias tecnologias
-            cada vez mais sofisticadas para essa modalidade de ensino não presencial, com
-            vistas à crescente necessidade de uma pedagogia que se desenvolva por meio
-            de novas relações de ensino-aprendizagem.
+    <h4 class="text-center corEnade">QUESTÃO DISCURSIVA 4</h4>
+        <p class="mt-4 text-justify">
+            Considerando a execução do algoritmo abaixo, responda ao que se pede nos itens a e b.            
+            <br><br>
+            01 algoritmo Vetores
+            <br>
+            02 variaveis
+            <br>
+            03 vetA[1..10], vetB[1..10], i: inteiro
+            <br>
+            04 inicio
+            <br>
+            05 para i <- 1 ate 10 passo 1 faca
+            <br>
+            06 vetB[i] <- 0
+            <br>
+            07 se resto(i,2) = 0 entao
+            <br>
+            08 vetA[i] <- i
+            <br>
+            09 senão
+            <br>
+            10 vetA[i] <- 2 * i
+            <br>
+            11 fimse
+            <br>
+            12 fimpara
+            <br>
+            13 para i <- 1 ate 10 passo 1 faca
+            <br>
+            14 enquanto(vetA[i] > i)
+            <br>
+            15 vetB[i] <- vetA[i]
+            <br>
+            16 vetA[i] <- vetA[i] – 1
+            <br>
+            17 fimenquanto
+            <br>
+            18 fimpara
+            <br>
+            19 fimalgoritmo
+        </p>
+        <p> 
+            a) Apresente os dados dos vetores vetA e vetB ao término da execução da linha 12. (valor: 5,0 pontos)
         </p>
         <p>
-            O Censo da Educação Superior de 2009, realizado pelo MEC/INEP, aponta
-            para o aumento expressivo do número de matrículas nessa modalidade. Entre
-            2004 e 2009, a participação da EaD na Educação Superior passou de 1,4%
-            para 14,1%, totalizando 838 mil matrículas, das quais 50% em cursos de
-            licenciatura. Levantamentos apontam ainda que 37% dos estudantes de EaD
-            estão na pós-graduação e que 42% estão fora do seu estado de origem.
+            b) Apresente os dados dos vetores vetA e vetB ao término da execução da linha 19. (valor: 5,0 pontos)
         </p>
-        <p>
-            Considerando as informações acima, enumere três vantagens de um curso a distância, justificando brevemente cada
-            uma delas. (valor: 10,0 pontos) 
-        </p>
-
         
     <div class="border container">
         <h4 class="text-center">RASCUNHO</h4>
