--- a/discursivas/discursiva5.html
+++ b/discursivas/discursiva5.html
@@ -3,34 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Questão Discursiva 1</title>
+    <title>Questão Discursiva 5</title>
 </head>
-<body>
+<body class="fundo1">
     <div class="container mt-3">
-    <h4 class="text-center corEnade">QUESTÃO DISCURSIVA 1</h4>
+    <h4 class="text-center corEnade">QUESTÃO DISCURSIVA 5</h4>
         <p class="mt-4">
-            A Educação a Distância (EaD) é a modalidade de ensino que permite que a
-            comunicação e a construção do conhecimento entre os usuários envolvidos
-            possam acontecer em locais e tempos distintos. São necessárias tecnologias
-            cada vez mais sofisticadas para essa modalidade de ensino não presencial, com
-            vistas à crescente necessidade de uma pedagogia que se desenvolva por meio
-            de novas relações de ensino-aprendizagem.
+            Jogos de tabuleiro são atividades comuns de entretenimento na vida cotidiana das
+            pessoas. Uma de suas características é a necessidade do uso de um tabuleiro
+            com localizações bem definidas para o posicionamento de peças, podendo indicar
+            também as fases do jogo. No livro O Homem que Calculava, de Malba Tahan
+            (São Paulo: Record, 2002, p. 120), há uma história na qual um rei deveria efetuar
+            o pagamento pelos serviços de um de seus conselheiros, dando-lhe uma certa
+            quantidade de grãos de trigo a ser calculada da seguinte forma: coloca-se 1 grão
+            de trigo na primeira casa do tabuleiro, 2 na segunda casa, 4 na terceira casa, 8 na
+            quarta casa e assim dobrando-se sucessivamente até a última casa.
+        </p>
+        <img src="/img/imgQD5.PNG" alt="">
+        <br><br>
+        <p>
+            Considerando o tabuleiro 4 x 4 ilustrado acima, contendo a indicação da ordem das casas, construa um único
+            algoritmo que:
         </p>
         <p>
-            O Censo da Educação Superior de 2009, realizado pelo MEC/INEP, aponta
-            para o aumento expressivo do número de matrículas nessa modalidade. Entre
-            2004 e 2009, a participação da EaD na Educação Superior passou de 1,4%
-            para 14,1%, totalizando 838 mil matrículas, das quais 50% em cursos de
-            licenciatura. Levantamentos apontam ainda que 37% dos estudantes de EaD
-            estão na pós-graduação e que 42% estão fora do seu estado de origem.
+            a) calcule, armazene em uma estrutura e escreva em ordem a quantidade de grãos de trigo em cada casa do
+            tabuleiro;
+            (valor: 8,0 pontos)
         </p>
         <p>
-            Considerando as informações acima, enumere três vantagens de um curso a distância, justificando brevemente cada
-            uma delas. (valor: 10,0 pontos) 
+            b) calcule, armazene em uma variável e escreva a quantidade total de grãos de trigo presentes no tabuleiro.
+            (valor: 2,0 pontos)
         </p>
 
         
