--- a/Q5a.html
+++ b/Q5a.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="funçoes.js"> </script>
-    <title>Questões 2</title>
+    <title>Questões 5</title>
 </head>
 
 <body class="fundo1" onchange="salvarFormulario('q5')" onload="autofill('q5')">
@@ -21,7 +21,7 @@
     </div>
     <div class="container">
         <div class="text-center">
-            <h1 class="font-weight-bold cssEnade">Site Simulado ENADE</h1>
+            <h1 class="font-weight-bold corEnade">Site Simulado ENADE</h1>
             <h3>TEMA: Análise e Desenvolvimento de Sistemas - 2011</h3>
         </div>
         <br><br>
