--- a/Q8a.html
+++ b/Q8a.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="imagem/png" href="img/logoEnade.png"/>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>  
+    <link rel="icon" type="imagem/png" href="img/logoEnade.png" />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <link rel="stylesheet" href="css/style.css">
     <script src="funçoes.js"> </script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -21,7 +21,7 @@
     </div>
     <div class="container">
         <div class="text-center">
-            <h1 class="font-weight-bold cssEnade">Site Simulado ENADE</h1>
+            <h1 class="font-weight-bold corEnade">Site Simulado ENADE</h1>
             <h3>TEMA: Análise e Desenvolvimento de Sistemas - 2011</h3>
         </div>
         <br><br>
@@ -113,9 +113,9 @@
             <a class="col-auto" href="Q9a.html"> Próxima Questão </a>
         </div>
 
-        <footer class="text-center"> 
-            <p> 
-                <i>Mais informações sobre o Enade, consultar o site do Enade no link: 
+        <footer class="text-center">
+            <p>
+                <i>Mais informações sobre o Enade, consultar o site do Enade no link:
                     <a target="_blank" href="http://enade.inep.gov.br/enade/#!/index"> Enade Inep </a>
                 </i>
             </p>
@@ -125,14 +125,14 @@
 <script>
     function getCorreta() {
 
-    return document.getElementById("correta").value
+        return document.getElementById("correta").value
     }
 
     function getCheckado() {
 
-    input = document.querySelectorAll('input')
+        input = document.querySelectorAll('input')
 
-    console.log(input)
+        console.log(input)
 
         for (c = 0; c < input.length; c++) {
 
@@ -147,38 +147,39 @@
 
     var entrada;
     var correta;
-    
+
     function correçao8() {
-        if(entrada != undefined){
-        entrada = getCheckado()
-        correta = getCorreta()
+        if (entrada != undefined) {
+            entrada = getCheckado()
+            correta = getCorreta()
 
-        if (entrada == correta) {
-            Swal.fire({
-			icon: 'success',
-			title: 'Boa!!',
-			text: `Parabéns! A alternativa correta realmente é a letra "e) II, III e IV."`
-              
-		  })
-            setInterval(() => {
-                window.open ('Q9a.html','_self',false)
-            }, 3000);
-        }   
+            if (entrada == correta) {
+                Swal.fire({
+                    icon: 'success',
+                    title: 'Boa!!',
+                    text: `Parabéns! A alternativa correta realmente é a letra "e) II, III e IV."`
 
-        else {
-            Swal.fire({
-			icon: 'error',
-			title: 'Oops...',
-			text: `Que pena, voce errou! A alternativa correta é a letra: "e) II, III e IV."`
-		  })
-          setInterval(() => {
-            window.open ('Q9a.html','_self',false)
-          }, 3000);
+                })
+                setInterval(() => {
+                    window.open('Q9a.html', '_self', false)
+                }, 3000);
+            }
+
+            else {
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Oops...',
+                    text: `Que pena, voce errou! A alternativa correta é a letra: "e) II, III e IV."`
+                })
+                setInterval(() => {
+                    window.open('Q9a.html', '_self', false)
+                }, 3000);
+            }
         }
-    }    
-    else{
-        inputVazio();
+        else {
+            inputVazio();
+        }
     }
-}
 </script>
+
 </html>
