Adicionado a pagina sobre

--- a/PaginaInicial.html
+++ b/PaginaInicial.html
@@ -13,9 +13,10 @@
 
 <body class="fundo1">
     <div class="container text-center">
-        <p></p>
+        <br>
         <img src="img/logo.png">
-        <p></p>
+        <br>
+        <br>
         <h1 class="corEnade">
             O que é o <i>"ENADE"?</i>
         </h1>
@@ -50,7 +51,7 @@
             Autores:
         </h2>
         <h5>
-            ALVES, Bruno <br> SILVA, Bruno <br> ARAÚJO, Ingrid<br>RIBEIRO, Miquéias<br>VANDERLEI, Julio <br>JORGE,
+            ALVES, Bruno<br>SILVA, Bruno<br>ARAÚJO, Ingrid<br>RIBEIRO, Miquéias<br>VANDERLEI, Julio<br>JORGE,
             Naydson
         </h5>
         <hr>
@@ -82,6 +83,7 @@
         <hr>
         <p> <i>Mais informações sobre o Enade, consultar o site do Enade no link: <a target="_blank"
                     href="http://enade.inep.gov.br/enade/#!/index"> Enade Inep </a></i></p>
+        <p> <i><a target="_blank" href="sobre.html"> Saiba mais sobre o projeto </a></i></p>
 
         <script>
 
