--- a/instrucoes.html
+++ b/instrucoes.html
@@ -1,36 +1,46 @@
 <!DOCTYPE html>
 <html lang="PT-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="imagem/png" href="img/logoEnade.png"/>
+    <link rel="icon" type="imagem/png" href="img/logoEnade.png" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>Instruções Simulado</title>
 </head>
+
 <body class="fundo1">
     <div class="container mt-4 text-center">
         <h1 class="corEnade">Página de Instruções para o Simulado Enade</h1>
         <br>
         <h3 class="">Como responder?</h3>
-        <p>Leia com atenção cada enunciado e responda a questão de acordo com seu conhecimento e as informações passadas em cada enunciado, e clique na opção desejada para salvar sua resposta, e no canto inferior direito, clique em "Próxima Questão"</p>
+        <p>Leia com atenção cada enunciado e responda a questão de acordo com seu conhecimento e as informações passadas
+            em cada enunciado, e clique na opção desejada para salvar sua resposta, e no canto inferior direito, clique
+            em "Próxima Questão"</p>
         <hr>
         <h3 class="">Botão "Próxima Questão"</h3>
         <p>Ao clicar no botão "Próxima Questão", você será redirecionado para a questão seguinte</p>
         <hr>
         <h3 class="">Botão "Corrigir"</h3>
-        <p>De acordo com sua resposta, ao clicar no botão "Corrigir", irá aparecer na tela uma janela pop-up, que irá mostrar uma prévia de cada resposta sendo ela respondida de maneira correta ou incorreta. Você será redirecionado automaticamente para a próxima questão, portanto clique no botão "Corrigir", somente quando tiver certeza de sua resposta!</p>
+        <p>De acordo com sua resposta, ao clicar no botão "Corrigir", irá aparecer na tela uma janela pop-up, que irá
+            mostrar uma prévia de cada resposta sendo ela respondida de maneira correta ou incorreta. Você será
+            redirecionado automaticamente para a próxima questão, portanto clique no botão "Corrigir", somente quando
+            tiver certeza de sua resposta!</p>
         <hr>
         <h3 class="">Botão "Finalizar Simulado"</h3>
-        <p>Ao clicar no botão "Finalizar Simulado", o site irá te redirecionar automaticamente para a página "Resultado" </p>
+        <p>Ao clicar no botão "Finalizar Simulado", o site irá te redirecionar automaticamente para a página "Resultado"
+        </p>
         <hr>
         <h3>Página "Resultado"</h3>
-        <p>A página "Resultado", irá mostrar informações como: Questões respondidas, acertos e porcentagem de alternativas corretas.</p>
+        <p>A página "Resultado", irá mostrar informações como: Questões respondidas, acertos e porcentagem de
+            alternativas corretas.</p>
         <hr>
         <h3 class="">Instruções de rodapé</h3>
-        <p> Ao final de cada página, estará disponível um link para redirecionamento para a página do <b>Enade</b>, onde é a fonte das questões utilizadas nesse simulado e para maiores informações. </p>
+        <p> Ao final de cada página, estará disponível um link para redirecionamento para a página do <b>Enade</b>, onde
+            é a fonte das questões utilizadas nesse simulado e para maiores informações. </p>
         <hr>
 
         <a class="btn btn-primary" type="submit" href="PaginaInicial.html">Página Inicial</a>
@@ -39,14 +49,15 @@
 
         <hr>
 
-        <footer class="text-center"> 
-            <p> 
-                <i>Mais informações sobre o Enade, consultar o site do Enade no link: 
-                    <a target="_blank" href="http://enade.inep.gov.br/enade/#!/index"> Enade Inep </a>
-                </i>
+        <footer class="text-center">
+            <p>
+                <i>Mais informações sobre o Enade, consultar o site do Enade no link:
+                    <a target="_blank" href="http://enade.inep.gov.br/enade/#!/index"> Enade Inep </a></i>
             </p>
+            <p> <i><a target="_blank" href="sobre.html"> Saiba mais sobre o projeto </a></i></p>
         </footer>
-    
+
     </div>
 </body>
+
 </html>
