--- a/resultado.html
+++ b/resultado.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" type="imagem/png" href="img/logoEnade.png"/>
+    <link rel="icon" type="imagem/png" href="img/logoEnade.png" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -30,12 +31,12 @@
         </div>
         <a class="btn btn-primary" type="submit" href="PaginaInicial.html">Retornar para Página Inicial</a>
         <hr>
-        <footer class="text-center"> 
-            <p> 
-                <i>Mais informações sobre o Enade, consultar o site do Enade no link: 
-                    <a target="_blank" href="http://enade.inep.gov.br/enade/#!/index"> Enade Inep </a>
-                </i>
+        <footer class="text-center">
+            <p>
+                <i>Mais informações sobre o Enade, consultar o site do Enade no link:
+                    <a target="_blank" href="http://enade.inep.gov.br/enade/#!/index"> Enade Inep </a></i>
             </p>
+            <p> <i><a target="_blank" href="sobre.html"> Saiba mais sobre o projeto </a></i></p>
         </footer>
     </div>
 </body>
