change PaginaInicial.html to index.html

--- a/instrucoes.html
+++ b/instrucoes.html
@@ -43,7 +43,7 @@
             é a fonte das questões utilizadas nesse simulado e para maiores informações. </p>
         <hr>
 
-        <a class="btn btn-primary" type="submit" href="PaginaInicial.html">Página Inicial</a>
+        <a class="btn btn-primary" type="submit" href="index.html">Página Inicial</a>
 
         <a class="btn btn-primary" type="submit" href="Q1a.html">INICIAR SIMULADO PMI</a>
 
