--- a/sobre.html
+++ b/sobre.html
@@ -45,6 +45,8 @@
                 Desenvolvimento: dez/2021.
             </h5>
             <hr>
+            <a class="btn btn-primary" type="submit" href="index.html">Retornar para Página Inicial</a>
+            <hr>
             <p> <i>Mais informações sobre o Enade, consultar o site do Enade no link: <a target="_blank"
                         href="http://enade.inep.gov.br/enade/#!/index"> Enade Inep </a></i></p>
 </body>
