--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <hr>
         <p> <i>Mais informações sobre o Enade, consultar o site do Enade no link: <a target="_blank"
                     href="http://enade.inep.gov.br/enade/#!/index"> Enade Inep </a></i></p>
-        <p> <i><a target="_blank" href="sobre.html"> Saiba mais sobre o projeto </a></i></p>
+        <p> <i><a href="sobre.html"> Saiba mais sobre o projeto </a></i></p>
 
     </div>
 </body>
